--- a/src/TicTacToe/TicTacToe.css
+++ b/src/TicTacToe/TicTacToe.css
@@ -36,11 +36,14 @@
     color: aquamarine;
     cursor: none;
 }
+.ticMain .newGame {
+    cursor: pointer;
+}
 
 .ticMain .winDeclare {
     background-color: aquamarine;
     position: fixed;
-    margin: 1rem 0rem 0rem 0.7rem;
+    margin: 0.8rem 0rem 0rem 0.28rem;
     /* width: 25%; */
     /* height: 54%; */
     padding: 1.3rem 1.8rem;
@@ -100,8 +103,7 @@
 .ticMain p span {
     color: rgba(255, 255, 255, 0.781);
     cursor: pointer;
-}
-
+} 
 
 @media screen and (max-width: 400px) and (min-width: 200px) {
 
@@ -114,7 +116,7 @@
     }
 
     .ticMain .winDeclare {
-        margin: 1rem 0rem 0rem 0.8rem;
+        margin: 1rem 0rem 0rem 0.4rem;
         /* width: 70%; */
         /* height: 40%; */
         padding: 2.5rem 2.7rem 1rem 2.5rem;
