--- a/src/TicTacToe/TicTacToe.css
+++ b/src/TicTacToe/TicTacToe.css
@@ -18,7 +18,40 @@
 
 .ticMain h1 {
     font-size: 35px;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.winScore {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;    
+    align-items: center;
+    margin-bottom: 1rem;
+}
+.winScore h3 {
+    font-size: 25px;
+    
+}
+.winScore .player1 {
+    border: 2px solid aquamarine;
+    color: aquamarine;
+    font-size: 25px;
+    border-radius: 50%;
+    padding: 1px 10px;
+}
+.winScore .player2 {
+    border: 2px solid red;
+    color: red;
+    font-size: 25px;
+    border-radius: 50%;
+    padding: 0px 8px 1px 7px;
+    align-items: center;
+}
+.winScore h5 {
+    font-size: 30px;
+}
+.winScore h1 {
+    font-size: 15px;
 }
 
 .ticMain table {
@@ -42,12 +75,10 @@
 }
 
 .ticMain .winDeclare {
-    background-color: aquamarine;
+   background-color: aquamarine;
     position: fixed;
-    margin: 0.8rem 0rem 0rem 0.28rem;
-    /* width: 25%; */
-    /* height: 54%; */
-    padding: 1.3rem 1rem;
+    margin: 0.8rem 0rem 0rem 0.15rem;
+    padding: 1.3rem 0.8rem;
     color: black;
     text-align: center;
     align-items: center;
@@ -56,7 +87,7 @@
 }
 
 .ticMain .winDeclare h1 {
-    margin-bottom: 3rem;
+     margin-bottom: 3rem;
     font-size: 26px;
 }
 
@@ -117,14 +148,14 @@
     }
 
     .ticMain .winDeclare {
-        margin: 1rem 0rem 0rem 0.4rem;
+         margin: 1rem 0rem 0rem 0rem;
         /* width: 70%; */
         /* height: 40%; */
-        padding: 2.5rem 2.7rem 1rem 2.5rem;
+        padding: 2.5rem 1.6rem 1rem 1.5rem;
     }
 
     .ticMain .winDeclare h1 {
-        font-size: 30px;
+        font-size: 28px;
     }
 
     .ticMain .winDeclare h3 {
