--- a/src/TicTacToe/TicUserVsComp.css
+++ b/src/TicTacToe/TicUserVsComp.css
@@ -23,17 +23,19 @@
 
 .ticMain h1 {
     font-size: 35px;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 .ticMain .winScore {
     width: 18rem;
     display: flex;
+    justify-content: center;
+    gap: 2rem;
     margin: 0 auto;
+    margin-bottom: 0.5rem;
     text-align: center;
 }
 .winScore h3{
-    margin: 0 auto;
     font-size: 22px;
 }
 .winScore h3 span {
@@ -41,11 +43,13 @@
 }
 
 .userScore {
-    color: aquamarine;
+    color: #7fffd4;
+    font-size: 26px;
+   
 }
-
 .comScore {
     color: red;
+    font-size: 26px;
 }
 
 .winScore h1 {
@@ -74,16 +78,13 @@
 }
 
 .ticMain .winDeclare {
-    background-color: aquamarine;
+   background-color: aquamarine;
     position: fixed;
-    margin: 0.8rem 0rem 0rem 0.28rem;
-    padding: 1.3rem 1rem;
+    margin: 0.8rem 0rem 0rem 0.15rem;
+    padding: 1.3rem 0.8rem;
     color: black;
     text-align: center;
     align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     border-radius: 10px;
     cursor: pointer;
 }
@@ -98,7 +99,7 @@
 }
 
 .ticMain .winDeclare button {
-    background-color: black;
+      background-color: black;
     color: aquamarine;
     font-size: 16px;
     margin-top: 2rem;
@@ -150,14 +151,14 @@
     }
 
     .ticMain .winDeclare {
-        margin: 1rem 0rem 0rem 0.4rem;
+        margin: 1rem 0rem 0rem 0rem;
         /* width: 70%; */
         /* height: 40%; */
-        padding: 2.5rem 2.7rem 1rem 2.5rem;
+        padding: 2.5rem 1.5rem 1rem 1.4rem;
     }
 
     .ticMain .winDeclare h1 {
-        font-size: 30px;
+        font-size: 28px;
     }
 
     .ticMain .winDeclare h3 {
