--- a/src/TicTacToe/TicNav.css
+++ b/src/TicTacToe/TicNav.css
@@ -9,10 +9,10 @@
     background-color: aquamarine;
     color: white;
     position: fixed;
-    padding: 0.8rem 1rem;
-    margin: 0.4rem 0.3rem;
+    padding: 0.4rem 0.5rem;
+    margin: 0.4rem 0.3rem 0rem 0.3rem;
     cursor: pointer;
-    border-radius: 20px;
+    border-radius: 15px;
     z-index: 1000;
 }
 
@@ -25,16 +25,24 @@
 .ticNav ul li {
     border-bottom: 1px solid black;
     padding: 10px 0px;
-    font-size: 16px;
+    font-size: 17px;
     font-weight: 600;
     color: black;
     cursor: pointer;
+    text-decoration: none;
 }
 .navLink {
   margin-top: 10px;
 }
-.navLink li {
+.navLink a {
     text-decoration: none;
+    color: black;
+    font-weight: 500;
+    border-bottom: 2px solid transparent;
+    padding: 1px 3px;
+}
+.navLink a:hover {
+    border-bottom: 2px solid black;
 }
 
 .ticNav #ticMenu {
